# gitmove

./: .gitignore  AGENTS.md  LICENSE  README.md  config.local.json  pyproject.toml
.cursor/: README.md  STRUCTURE.md  constraints.md  constraints.md.template  ecc-manifest.md.template
.cursor/agents/: backend-dev.md  doc-sync.md  frontend-dev.md  frontend-vue-dev.md  product-manager.md  qa-engineer.md  vue-build-resolver.md  vue-reviewer.md
.cursor/evals/: _example-feature.md  _example-requirements-handoff.md
.cursor/hooks/: CURSOR-ECC-适配.md  hooks.json
.cursor/rules/: ai-execution.mdc  api-contracts.mdc  backend-spring.mdc  docs-maintenance.mdc  frontend-react.mdc  frontend-vue.mdc  java-coding-style.mdc  java-hooks.mdc  java-patterns.mdc  java-security.mdc  (+13 more)
docs/: README.md
scripts/: build-installer.ps1  build.ps1  build.py  build.sh  build_installer.py  entry_cli.py  entry_gui.py  purge-local-files-from-history.ps1  purge-local-files-from-history.sh  test_mcp_stdio.py
tests/: conftest.py  test_async_runner.py  test_batch_sync_summary.py  test_build_installer.py  test_config.py  test_config_extra.py  test_config_import.py  test_cursor_vendor_profile.py  test_doctor.py  test_doctor_extra.py  test_doctor_more.py  test_errors.py  test_exclude.py  test_exclude_escape.py  test_git.py  test_gui_integration.py  test_gui_overview.py  test_gui_projects.py  test_gui_scenarios.py  test_gui_theme.py  test_gui_ux_integration.py  test_gui_vendor_phase2.py  test_link.py  test_link_extra.py  test_link_file.py  test_link_junction.py  test_link_migrate_doctor.py  test_link_migrate_special.py  test_link_more.py  test_main_thread_call.py  test_mcp_server.py  test_phase2.py  test_platform_util.py  test_projects.py  test_projects_repair.py  test_registry.py  test_repo_context.py  test_skip.py  test_subprocess_windows.py  test_sync.py  (+10 more)
(+88 files in other folders)
