[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitmove"
version = "0.1.0"
description = "Manage local-only Git exclusions without modifying .gitignore (skip-worktree, external links, worktrees)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "gitmove" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
gitmove = "gitmove.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gitmove"]

[tool.hatch.build.targets.sdist]
include = ["src/gitmove", "README.md", "LICENSE", "pyproject.toml"]
