[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gitmove"
version = "0.3.1"
description = "Manage local-only Git exclusions without modifying .gitignore (skip-worktree, external links, worktrees)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "gitmove" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "customtkinter>=5.2.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
gitmove = "gitmove.cli:app"
gitmove-gui = "gitmove.gui.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
build = [
    "pyinstaller>=6.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["gitmove"]
branch = true
omit = [
    "*/gitmove/cli.py",
    "*/gitmove/gui/app.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
omit = [
    "*/gitmove/cli.py",
    "*/gitmove/gui/app.py",
]
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise typer.Exit",
]

[tool.setuptools.packages.find]
where = ["src"]
